# buildsystem

./: .gitignore  Makefile  README.md  prepare-for-bs.sh
Patches/: e2fsprogs-1.45.6-gettext-patch.patch  enigma2.patch  libstb-hal.patch  neutrino-ddt.patch  titan-Makefile.patch  titan.patch
Patches/ct-ng/: crosstool-ng-872341e3-gcc-6.3.0-mipsel.config  crosstool-ng-872341e3-gcc-linaro-6.3-2017.05-arm.config
apps/tools/libeplayer3/: Makefile.am
hostapps/atevio7500/: atevio7500.sh
hostapps/common/: gitversion.sh
hostapps/nor_flash/: make_flash.sh
hostapps/spark/: spark.sh
hostapps/tf7700/: tf7700.sh
hostapps/ufs912/: ufs912.sh
hostapps/ufs913/: ufs913.sh
machine/atevio7500/: atevio7500.mk
machine/bre2ze4k/: bre2ze4k.mk
machine/bre2zet2c/: bre2zet2c.mk
machine/cuberevo/: cuberevo.mk
machine/cuberevo_2000hd/: cuberevo_2000hd.mk
machine/cuberevo_250hd/: cuberevo_250hd.mk
machine/cuberevo_3000hd/: cuberevo_3000hd.mk
machine/cuberevo_mini/: cuberevo_mini.mk
machine/cuberevo_mini2/: cuberevo_mini2.mk
machine/e4hdultra/: e4hdultra.mk
machine/fortis_hdbox/: fortis_hdbox.mk
machine/gb800se/: gb800se.mk
machine/h7/: h7.mk
machine/hd51/: hd51.mk
make/: bootstrap.mk  buildenv.mk  cleantargets.mk  contrib-apps.mk  contrib-libs.mk  crosstool-sh4.mk  crosstool.mk  driver.mk  enigma2.mk  ffmpeg.mk  flashimage.mk  gstreamer.mk  image.mk  linux-kernel.mk  lua.mk  neutrino-plugins.mk  neutrino.mk  neutrino2.mk  nhd2.mk  packages.mk  python.mk  release-neutrino.mk  release.mk  root-etc.mk  system-tools.mk  titan.mk  tools.mk
(+327 files in other folders)
